syntax = "proto3";

package UserGrpc;

service UserGrpc{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetAllUser(GetAllUserRequest) returns (GetAllUserResponse);
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponses);
}

message User {
    int64 id = 1;
    string username = 2;
    string password = 3;
}
// bool error = 1;
// int64 status = 2;
// string message = 3;



message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool error = 1;
    int64 status = 2;
    string message = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse{
    bool error = 1;
    int64 status = 2;
    string message = 3;
    int64 id = 4;
    string username = 5;
}

message GetAllUserRequest{}


message GetAllUserResponse{
    bool error = 1;
    int64 status = 2;
    string message = 3;
    repeated User users =4;
}

message GetByIDRequest{
    int64 id = 1;

}

message GetByIDResponse{
    bool error = 1;
    int64 status = 2;
    string message = 3;
    User user =4;
}


message UpdatePasswordRequest{
    int64 id = 1;
    string password = 2;
    string new_password =3;

}

message UpdatePasswordResponse{
    bool error = 1;
    int64 status = 2;
    string message = 3;
}

message DeleteUserRequest{
    int64 id = 1;
}

message DeleteUserResponses{
    bool error = 1;
    int64 status = 2;
    string message = 3;
}